Added tool to restrict the length of the transcriptions in a lattice to a given one

--- a/latbin/Makefile
+++ b/latbin/Makefile
@@ -4,7 +4,8 @@ include ../kaldi.mk
 
 BINFILES = \
 	lattice-info \
-	lattice-to-transcript-length-post \
+	lattice-restrict-length \
+	lattice-to-transcript-length-dist \
 	lattice-to-word-frame-post \
 	lattice-to-word-position-post
 
