Added tool to prune a lattices by setting the maximum number of states and/or arcs

--- a/latbin/Makefile
+++ b/latbin/Makefile
@@ -5,6 +5,7 @@ include ../kaldi.mk
 BINFILES = \
 	lattice-best-path2 \
 	lattice-info \
+	lattice-prune-dyn-beam \
 	lattice-remove-ctc-blank \
 	lattice-restrict-length \
 	lattice-to-transcript-length-dist \
