Added lattice-expand-subpaths tool

--- a/latbin/Makefile
+++ b/latbin/Makefile
@@ -4,7 +4,7 @@ include ../kaldi.mk
 
 BINFILES = \
 	lattice-best-path2 \
-	lattice-char-to-word \
+	lattice-expand-subpaths \
 	lattice-info \
 	lattice-prune-dyn-beam \
 	lattice-remove-ctc-blank \
@@ -19,13 +19,13 @@ TESTFILES =
 
 ADDLIBS = \
 	$(KALDI_ROOT)/src/lat/kaldi-lat.a \
-	$(KALDI_ROOT)/src/lm/kaldi-lm.a \
 	$(KALDI_ROOT)/src/fstext/kaldi-fstext.a \
 	$(KALDI_ROOT)/src/hmm/kaldi-hmm.a \
 	$(KALDI_ROOT)/src/tree/kaldi-tree.a \
 	$(KALDI_ROOT)/src/util/kaldi-util.a \
 	$(KALDI_ROOT)/src/matrix/kaldi-matrix.a \
 	$(KALDI_ROOT)/src/base/kaldi-base.a
+
 
 include $(KALDI_ROOT)/src/makefiles/default_rules.mk
 
